make sure game titles fit on one line and overlay covers image

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -27,7 +27,7 @@ body {
     gap: 5rem;
 }
 .circle-page {
-    width: 300px;
+    width: max(400px, 30%);
     height: fit-content;
     cursor: pointer;
     position: relative;
@@ -37,12 +37,12 @@ body {
     gap: 1rem;
 }
 .img-wrapper {
-    width: 100%;
+    width: 300px;
     height: fit-content;
     position: relative;
 }
 .circle-page img {
-    width: 99%;
+    width: 100%;
     height: auto;
     overflow: hidden;
     border-radius: 10px;
@@ -51,7 +51,7 @@ body {
 .img-overlay {
     position: absolute;
     top: 0;
-    width: 100%;
+    width: 102.5%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.35);
     border-radius: 10px;
